# ros2_mapping_project

./: .data  .vscode_git_ping.txt  Focuser.py  TabletJetsonComm.py  bringup_slam_stack.sh  encoders_node.py  enemy_approach_node.py  final_hopefully.py  frames.gv  frames.gv.gv  frames_2025-09-22_21.24.15.gv  frames_2025-11-10_14.14.59.gv  frames_2025-11-10_14.24.55.gv  frames_2025-11-14_21.07.22.gv  full_on_test.py  imu_bno055_smbus.py  imu_node.py  imu_twist_odom_node.py  jetson_imx519_cuda_autofocus (2).py  keyboard_gpio_drive.py  manual_motor_test.py  mapping_launch.py  motor_driver_node.py  motor_driver_pca_reg_dual.py  nav2_params.yaml  nav2_params.yaml.bak  odom_params.yaml  package.xml  pca_dual_manual_test.py  pseudo_odom_node.py  readme.txt  readme2.txt  setup.py  setup.py.save  simple_nav.xml  slam_params.yaml  slam_params_no_ekf.yaml  slam_reset_key.py  tasks.json  test.py  (+6 more)
config/: ekf.yaml  motor_driver.yaml  slam_params.yaml  twist_mux.yaml
install/: local_setup.sh  setup.sh
install/ros2_mapping_project/lib/ros2_mapping_project/: encoders_node  imu_node  lidar_node  motor_driver_node
launch/: bringup.launch.py  bringup_gpio.launch.py  mapping_launch.py  nav2_minimal.launch.py  nav2_navigation.launch.py  slam.launch.py  slam_bringup.launch.py
log/: latest_build
maps/: empty_map.pgm  empty_map.yaml
readme/: complete.txt  nav2fullrun.txt  readme2.txt  readme3.txt  test_readme.txt
ros2_mapping_project/: encoders_node.py
ros2_mapping_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+21 files in other folders)
