<?xml version="1.0"?>
<package format="3">
  <name>ros2_mapping_project</name>
  <version>0.0.1</version>
  <description>Custom RPLIDAR + IMU mapping with SLAM and Nav2</description>
  <maintainer email="team4@example.com">team4</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend> <!-- for manual testing -->
  <export><build_type>ament_python</build_type></export>
</package>
